syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

import "google/protobuf/empty.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetLast (google.protobuf.Empty) returns (Data);

  rpc GetUpdates (google.protobuf.Empty) returns (stream Data);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Data {
    int32 index = 1;
    string time = 2;
}
